[metadata]
name = pywbem
summary = pywbem - A WBEM client
description-file = README_PYPI.rst
license = LGPL version 2.1, or (at your option) any later version
author = Tim Potter
author-email = tpot@hp.com
maintainer = Andreas Maier, Karl Schopmeyer
maintainer-email = maiera@de.ibm.com, k.schopmeyer@swbell.net
home-page = https://pywbem.github.io/pywbem/
project_urls = 
	Bug Tracker = https://github.com/pywbem/pywbem/issues
	Documentation = https://pywbem.readthedocs.io/en/latest/
	Source Code = https://github.com/pywbem/pywbem
classifier = 
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Systems Administration

[files]
packages = 
	pywbem
	pywbem_mock
package_data = 
	pywbem =
	NEWS.md
	LICENSE.txt
scripts = 
	wbemcli
	wbemcli.py
	mof_compiler
	wbemcli.bat
	mof_compiler.bat

[wheel]
universal = 1

[pbr]
warnerrors = true

[egg_info]
tag_build = 
tag_date = 0

